# pomodoro-console

./: LICENSE  README.md  pyproject.toml
src/pomodoro/: __init__.py  main.py  tools.py
